# TensorChess

./: CMakeLists.txt  main.cpp
class_chess/: .gitignore  pyproject.toml
class_chess/app/: chess_board.py  chess_game.py
func_chess/: pyproject.toml
func_chess/app/: game.py
tensor_chess/: pyproject.toml
tensor_chess/app/: chess_board.py  chess_game.py  chess_moves.py  chess_set.py  settings.py  spritesheet.py
