[tool.poetry]
name = "func-chess"
version = "0.1.0"
description = ""
authors = ["Antonio Zea Jr <zeajantonio@gmail.com>"]
readme = "README.md"
packages = [{include = "func_chess"}]

[tool.poetry.dependencies]
python = "^3.11"
cytoolz = "^0.12.1"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
